20/03/2011	Added DeprecatePrefix option (from Mark Smith)

28/02/2011	fixed Debian Bug#615625: radvd: Error in DNSSL parsing

26/02/2011	Added Base6Interface option

30/01/2011	Added detailed output to radvd --help for the long options.
		Two sigterms or sigints calls abort.
		build system cleanup work.

22/01/2011	Fixed crash and memory leak in device-bsd44.c when an
		interface defined in the config file doesn't exist.
		Patch submitted by Manual Kasper.

12/01/2011	Release 1.7.

07/01/2011	make dist (for building tar.gz source packages) fixed.
		- 07/01: AdvSourceLLAddress fixed on FreeBSD when link
		layer token length is zero.

14/12/2010	Deprecate old, pre-RFC5006 parameters.
		Support RFC6106 by adding DNS Search List support.
		From Pierre Ossman.

14/12/2010      Integrate cleanup patches from Reuben Hawkins:
                - 14/05: patch configure.in to allow OSX 10.6 builds
		- 05/06: Unnecessary >255 test when using uint8_t
                - 06/06: fix fscanf parsing on Linux 
		- 10/12: Fix whitespaces; #includes; CLEANFILES
		From Ben Greear:
                - 05/11: Print errors on all exit() codepaths.
		From Iain J. Watson:
		- 09/12: Add '-c' flag to test configuration.
		From Pierre Ossman (idea):
                - 13/12: Remove automake-generated files.

04/05/2010	Fix a segmentation fault on reload_config() timer list
		corruption that only occurs with multiple interfaces.

10/03/2010	Fix radvd skipping multiple interfaces when
                UnicastOnly is on or AdvSendAdvert is off.
		This got broken in radvd 1.3. Patch from Cedric BAIL.

05/03/2010	Release 1.6.

05/03/2010	Update Redhat spec and init files from Fedora.

28/01/2010	Decrease MSG_SIZE from 4096 to about 1500B. Send buffer
                uses a smaller size in order to avoid sending out
                fragmented packets, yet being able to receive full-size
                frames.

28/01/2010	Keep track of buffer size and exit if the number of